// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`info-panel Flood Zones should show the info panel for flood zone 2 1`] = `
"<dl class="govuk-summary-list govuk-!-margin-bottom-3">
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key govuk-!-width-one-half">
      <span class="govuk-body-s">
        <strong>Easting and northing</strong>
      </span>
    </dt>
    <dd class="govuk-summary-list__value">
      <span class="govuk-body-s" id="info-fz2-sea">
        COORDS
      </span>
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key govuk-!-width-one-half">
      <span class="govuk-body-s">
        <strong>Timeframe</strong>
      </span>
    </dt>
    <dd class="govuk-summary-list__value">
      <span class="govuk-body-s" id="info-timeframe">
        Present day
      </span>
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key govuk-!-width-one-half">
      <span class="govuk-body-s">
        <strong>Flood zone</strong>
      </span>
    </dt>
    <dd class="govuk-summary-list__value">
      <span class="govuk-body-s" id="info-flood-zone">
        2
      </span>
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key govuk-!-width-one-half">
      <span class="govuk-body-s">
        <strong>Flood source</strong>
      </span>
    </dt>
    <dd class="govuk-summary-list__value">
      <span class="govuk-body-s" id="info-flood-source">
        Sea
      </span>
    </dd>
  </div>
</dl>
<h2 id='info-fz-updates-title' class="govuk-heading-s">Updates to flood zones 2 and 3</h2>
<p id='info-fz-updates-body' class="govuk-body-s">
  Flood zones 2 and 3 have been updated to include local detailed models, and a new improved national model.
</p>"
`;

exports[`info-panel Flood Zones should show the info panel for flood zone 3 1`] = `
"<dl class="govuk-summary-list govuk-!-margin-bottom-3">
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key govuk-!-width-one-half">
      <span class="govuk-body-s">
        <strong>Easting and northing</strong>
      </span>
    </dt>
    <dd class="govuk-summary-list__value">
      <span class="govuk-body-s" id="info-fz3-river">
        COORDS
      </span>
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key govuk-!-width-one-half">
      <span class="govuk-body-s">
        <strong>Timeframe</strong>
      </span>
    </dt>
    <dd class="govuk-summary-list__value">
      <span class="govuk-body-s" id="info-timeframe">
        Present day
      </span>
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key govuk-!-width-one-half">
      <span class="govuk-body-s">
        <strong>Flood zone</strong>
      </span>
    </dt>
    <dd class="govuk-summary-list__value">
      <span class="govuk-body-s" id="info-flood-zone">
        3
      </span>
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key govuk-!-width-one-half">
      <span class="govuk-body-s">
        <strong>Flood source</strong>
      </span>
    </dt>
    <dd class="govuk-summary-list__value">
      <span class="govuk-body-s" id="info-flood-source">
        River
      </span>
    </dd>
  </div>
</dl>
<h2 id='info-fz-updates-title' class="govuk-heading-s">Updates to flood zones 2 and 3</h2>
<p id='info-fz-updates-body' class="govuk-body-s">
  Flood zones 2 and 3 have been updated to include local detailed models, and a new improved national model.
</p>"
`;

exports[`info-panel Flood Zones should show the info panel for flood zone 3 2`] = `
"<dl class="govuk-summary-list govuk-!-margin-bottom-3">
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key govuk-!-width-one-half">
      <span class="govuk-body-s">
        <strong>Easting and northing</strong>
      </span>
    </dt>
    <dd class="govuk-summary-list__value">
      <span class="govuk-body-s" id="info-fz3-river-and-sea">
        COORDS
      </span>
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key govuk-!-width-one-half">
      <span class="govuk-body-s">
        <strong>Timeframe</strong>
      </span>
    </dt>
    <dd class="govuk-summary-list__value">
      <span class="govuk-body-s" id="info-timeframe">
        Present day
      </span>
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key govuk-!-width-one-half">
      <span class="govuk-body-s">
        <strong>Flood zone</strong>
      </span>
    </dt>
    <dd class="govuk-summary-list__value">
      <span class="govuk-body-s" id="info-flood-zone">
        3
      </span>
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key govuk-!-width-one-half">
      <span class="govuk-body-s">
        <strong>Flood source</strong>
      </span>
    </dt>
    <dd class="govuk-summary-list__value">
      <span class="govuk-body-s" id="info-flood-source">
        River and sea
      </span>
    </dd>
  </div>
</dl>
<h2 id='info-fz-updates-title' class="govuk-heading-s">Updates to flood zones 2 and 3</h2>
<p id='info-fz-updates-body' class="govuk-body-s">
  Flood zones 2 and 3 have been updated to include local detailed models, and a new improved national model.
</p>"
`;

exports[`info-panel Flood Zones should show the info panel for flood zone cc 1`] = `
"<dl class="govuk-summary-list govuk-!-margin-bottom-3">
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key govuk-!-width-one-half">
      <span class="govuk-body-s">
        <strong>Easting and northing</strong>
      </span>
    </dt>
    <dd class="govuk-summary-list__value">
      <span class="govuk-body-s" id="info-fzcc-river-and-sea">
        COORDS
      </span>
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key govuk-!-width-one-half">
      <span class="govuk-body-s">
        <strong>Timeframe</strong>
      </span>
    </dt>
    <dd class="govuk-summary-list__value">
      <span class="govuk-body-s" id="info-timeframe">
        Climate change
      </span>
    </dd>
  </div>
  
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key govuk-!-width-one-half">
      <span class="govuk-body-s">
        <strong>Flood source</strong>
      </span>
    </dt>
    <dd class="govuk-summary-list__value">
      <span class="govuk-body-s" id="info-flood-source">
        River and sea
      </span>
    </dd>
  </div>
</dl>
<h2 id='info-how-to-cc-title' class="govuk-heading-s">How to use flood zones plus climate change</h2>
<p id='info-how-to-cc-body' class="govuk-body-s">
  The flood zones plus climate change dataset shows how the combined extent of flood
  zones 2 and 3 could increase with climate change over the next century, ignoring the
  benefits of any existing flood defences.
</p>
<p id='info-how-to-cc-url' class="govuk-body-s">
  <a href="/how-to-use-flood-map-for-planning-data">
    Find out more about flood map for planning data and how to use it
  </a>
</p>"
`;

exports[`info-panel Flood Zones should show the info panel for flood zone nd 1`] = `
"<dl class="govuk-summary-list govuk-!-margin-bottom-3">
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key govuk-!-width-one-half">
      <span class="govuk-body-s">
        <strong>Easting and northing</strong>
      </span>
    </dt>
    <dd class="govuk-summary-list__value">
      <span class="govuk-body-s" id="info-fznodata">
        COORDS
      </span>
    </dd>
  </div>
  <div class="govuk-summary-list__row">
    <dt class="govuk-summary-list__key govuk-!-width-one-half">
      <span class="govuk-body-s">
        <strong>Timeframe</strong>
      </span>
    </dt>
    <dd class="govuk-summary-list__value">
      <span class="govuk-body-s" id="info-timeframe">
        Climate change
      </span>
    </dd>
  </div>
  
  
</dl>
<h2 id='info-fznd-title' class="govuk-heading-s">Climate change data unavailable</h2>
<p id='info-fznd-body' class="govuk-body-s">
  In some locations flood zones plus climate change data is not currently available while we make important improvements to our data.
</p>
<p id='info-how-to-cc-url' class="govuk-body-s">
  <a href="/how-to-use-flood-map-for-planning-data">
    Find out more about flood map for planning data and how to use it
  </a>
</p>"
`;
